Reworking the shift and ctrl clicking to be clearer and fix double clicking. Current issues include ctrl clicking and then shift clicking deselecting all but the most recently ctrl clicked row, and ctrl clicking in a shift-selected block not removing the draggable icon. Also improved some documentation that was not specific #feature #fix #document

--- a/portfolio/src/main/resources/static/css/styles.css
+++ b/portfolio/src/main/resources/static/css/styles.css
@@ -714,9 +714,10 @@ section {
     cursor: pointer;
 }
 
-.selected {
-    background-color: var(--main-border-colour);
+#groupTableBody .ui-selected {
+    background-color: var(--main-border-colour)
 }
+
 
 .colourForDrag {
     background-color: var(--main-border-colour);
@@ -1224,4 +1225,5 @@ section {
     padding-top: 0.5rem;
     margin-bottom: 0;
 }
+
 
